// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1ns3hj9"
  >
    stroke Badge
  </div>
</div>
`;

exports[`Storyshots color blue 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1k6yxql"
  >
    blue Badge
  </div>
</div>
`;

exports[`Storyshots color blue stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1c9tjbq"
  >
    blue stroke Badge
  </div>
</div>
`;

exports[`Storyshots color gray 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-ebyhko"
  >
    gray Badge
  </div>
</div>
`;

exports[`Storyshots color gray stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1ns3hj9"
  >
    gray stroke Badge
  </div>
</div>
`;

exports[`Storyshots color green 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-731l77"
  >
    green Badge
  </div>
</div>
`;

exports[`Storyshots color green stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-h74tif"
  >
    green stroke Badge
  </div>
</div>
`;

exports[`Storyshots color red 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-k8xkm0"
  >
    red Badge
  </div>
</div>
`;

exports[`Storyshots color red stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-16g22id"
  >
    red stroke Badge
  </div>
</div>
`;

exports[`Storyshots color yellow 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-svwlyj"
  >
    yellow Badge
  </div>
</div>
`;

exports[`Storyshots color yellow stroke 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <div
    className="css-1lahp9y"
  >
    yellow stroke Badge
  </div>
</div>
`;
